--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/pi-spi/qrcode"
+    "url": "https://github.com/pi-spi/qrcode-js"
   },
   "bugs": {
     "url": "mailto:pi-spi@bceao.int"
